--- a/samples/Automaty.Generators.EFCoreRepositories.Sample/Automaty.Generators.EFCoreRepositories.Sample.csproj
+++ b/samples/Automaty.Generators.EFCoreRepositories.Sample/Automaty.Generators.EFCoreRepositories.Sample.csproj
@@ -2,14 +2,14 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>netcoreapp1.1</TargetFramework>
+		<TargetFramework>netcoreapp2.0</TargetFramework>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="1.1.2" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SQLite" Version="1.1.2" />
-		<PackageReference Include="Automaty.Generators.EFCoreRepositories" Version="1.0.0-alpha1" />
-		<DotNetCliToolReference Include="Automaty.DotNetCli" Version="1.0.0-alpha6" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SQLite" Version="2.0.1" />
+		<PackageReference Include="Automaty.Generators.EFCoreRepositories" Version="1.1.0-*" />
+		<DotNetCliToolReference Include="Automaty.DotNetCli" Version="1.0.0-*" />
 	</ItemGroup>
 
 	<ItemGroup>
