--- a/src/Automaty.Generators.EFCoreRepositories/Automaty.Generators.EFCoreRepositories.csproj
+++ b/src/Automaty.Generators.EFCoreRepositories/Automaty.Generators.EFCoreRepositories.csproj
@@ -24,7 +24,7 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.0.0" />
 		<PackageReference Include="Humanizer.Core" Version="2.2.0" />
 		<PackageReference Include="SmartFormat.NET" Version="2.0.0" />
-		<PackageReference Include="Automaty.Common" Version="1.0.0-alpha2" />
+		<PackageReference Include="Automaty.Common" Version="1.0.1-rc1" />
 	</ItemGroup>
 
 </Project>
