--- a/samples/Automaty.Generators.EFCoreRepositories.Sample/Automaty.Generators.EFCoreRepositories.Sample.csproj
+++ b/samples/Automaty.Generators.EFCoreRepositories.Sample/Automaty.Generators.EFCoreRepositories.Sample.csproj
@@ -2,13 +2,12 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>netcoreapp2.0</TargetFramework>
+		<TargetFramework>netcoreapp3.0</TargetFramework>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.3" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SQLite" Version="2.2.3" />
-		<PackageReference Include="Automaty.Generators.EFCoreRepositories" Version="1.1.0-*" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.0-preview3.19153.1" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SQLite" Version="3.0.0-preview3.19153.1" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -34,7 +33,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<DotNetCliToolReference Include="Automaty.DotNetCli" Version="1.0.1-rc2" />
+		<DotNetCliToolReference Include="Automaty.DotNetCli" Version="3.0.0-alpha1" />
 	</ItemGroup>
 
 </Project>
