--- a/src/Automaty.Generators.EFCoreRepositories/Automaty.Generators.EFCoreRepositories.csproj
+++ b/src/Automaty.Generators.EFCoreRepositories/Automaty.Generators.EFCoreRepositories.csproj
@@ -20,10 +20,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.0" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.0.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.0-preview3.19153.1" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.0.0-preview3.19153.1" />
 		<PackageReference Include="Humanizer.Core" Version="2.2.0" />
-		<PackageReference Include="SmartFormat.NET" Version="2.0.0" />
 		<PackageReference Include="Automaty.Common" Version="1.0.1-rc1" />
 	</ItemGroup>
 
