--- a/samples/Automaty.Generators.EFCoreRepositories.Sample/Automaty.Generators.EFCoreRepositories.Sample.csproj
+++ b/samples/Automaty.Generators.EFCoreRepositories.Sample/Automaty.Generators.EFCoreRepositories.Sample.csproj
@@ -2,20 +2,35 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>netcoreapp2.0</TargetFramework>
+		<TargetFramework>netcoreapp2.2</TargetFramework>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SQLite" Version="2.0.1" />
-		<PackageReference Include="Automaty.Generators.EFCoreRepositories" Version="1.1.0-*" />
-		<DotNetCliToolReference Include="Automaty.DotNetCli" Version="1.0.0-*" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.3" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SQLite" Version="2.2.3" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<Compile Update="Repositories.*.cs">
+		<PackageReference Include="Automaty.Generators.EFCoreRepositories" Version="2.2.0-*" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Compile Remove="Repositories\Host.cs" />
+		<Compile Remove="Repositories\Interfaces.cs" />
+		<Compile Remove="Repositories\Repositories.cs" />
+		<None Include="Repositories\Host.cs" />
+		<None Include="Repositories\Interfaces.cs" />
+		<None Include="Repositories\Repositories.cs" />
+		<Compile Update="Repositories\*Repository.generated.cs">
 			<DependentUpon>Repositories.cs</DependentUpon>
 		</Compile>
+		<Compile Update="Repositories\I*Repository.generated.cs">
+			<DependentUpon>Interfaces.cs</DependentUpon>
+		</Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+		<DotNetCliToolReference Include="Automaty.DotNetCli" Version="2.2.0-rc1" />
 	</ItemGroup>
 
 </Project>
