--- a/src/Automaty.Generators.EFCoreRepositories/Automaty.Generators.EFCoreRepositories.csproj
+++ b/src/Automaty.Generators.EFCoreRepositories/Automaty.Generators.EFCoreRepositories.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<Version>1.1.0-alpha1</Version>
+		<Version>2.2.0-alpha1</Version>
 		<PackageId>Automaty.Generators.EFCoreRepositories</PackageId>
 		<Description>An Automaty based generator for Entity Framework Core repositories. Creates strongly typed repositories based on the IModel of your context.</Description>
 		<PackageTags>EntityFrameworkCore EFCore Repositories CodeGeneration Automaty</PackageTags>
@@ -20,11 +20,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.0" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.0.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.3" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.2.3" />
 		<PackageReference Include="Humanizer.Core" Version="2.2.0" />
-		<PackageReference Include="SmartFormat.NET" Version="2.0.0" />
-		<PackageReference Include="Automaty.Common" Version="1.0.0-alpha2" />
+		<PackageReference Include="Automaty.Common" Version="1.0.1-rc1" />
 	</ItemGroup>
 
 </Project>
